# mlops-project-structure-for-data-scientists

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
notebooks/: 01_exploration.ipynb
scripts/: evaluate.py  train.py
src/ml_project/: __init__.py  features.py  predict.py  train.py
src/my_ml_project/: __init__.py  data.py  predict.py  train.py
tests/: test_example.py
